[gd_scene load_steps=16 format=3 uid="uid://ddstvahxhigau"]

[ext_resource type="Script" path="res://scripts/boss_bubble.gd" id="1_5bua7"]
[ext_resource type="Texture2D" uid="uid://bp5ixf64gyd5d" path="res://assets/art/bubble/bolla-1.png" id="1_xax12"]
[ext_resource type="Texture2D" uid="uid://bhh2s77l3k2qt" path="res://assets/art/bubble/faccina.png" id="2_fy3y1"]
[ext_resource type="PackedScene" uid="uid://b30tid116mumg" path="res://game/entities/boss_bubble/bubble_mine.tscn" id="2_n041y"]
[ext_resource type="Texture2D" uid="uid://bqtqo5gjodhdc" path="res://assets/art/tribunal/tribunal_background.png" id="3_62e6d"]
[ext_resource type="Texture2D" uid="uid://yvemr4l6awhj" path="res://assets/art/tribunal/tribunal_chair.png" id="4_ixiw2"]
[ext_resource type="Texture2D" uid="uid://wclt2j6lnkbv" path="res://assets/art/tribunal/bubble_wig.png" id="6_f1vc6"]
[ext_resource type="Texture2D" uid="uid://b26p7xlsq7fob" path="res://assets/art/tribunal/tribunal_desk.png" id="7_fuxa4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1d8u2"]
radius = 159.531

[sub_resource type="Animation" id="Animation_sdckh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D/Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Path2D/PathFollow2D/Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 180)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Path2D/PathFollow2D/Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TribunalChair:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5, 197)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TribunalDesk:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 182)]
}

[sub_resource type="Animation" id="Animation_jc2bl"]
resource_name = "begin_fight"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D/Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2.3, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.7, 0.7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Path2D/PathFollow2D/Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.1, 0.15, 0.2, 2.3, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 180), Vector2(10, 180), Vector2(-10, 180), Vector2(5, 180), Vector2(-5, 180), Vector2(0, 180), Vector2(0, 180), Vector2(0, -50), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Path2D/PathFollow2D/Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06, 0.13, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.533612, 0.468613, 1), Color(1, 1, 1, 1), Color(1, 0.533333, 0.466667, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TribunalChair:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-5, 197), Vector2(-1000, 197)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TribunalDesk:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.4, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1300, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.3, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 182), Vector2(0, 182), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_h2a3b"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D/Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_lqyk3"]
resource_name = "hit"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(5, 0), Vector2(-5, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Path2D/PathFollow2D/Body:modulate")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.13, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.533612, 0.468613, 1), Color(1, 1, 1, 1), Color(1, 0.533333, 0.466667, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jaxbi"]
_data = {
"RESET": SubResource("Animation_sdckh"),
"begin_fight": SubResource("Animation_jc2bl"),
"default": SubResource("Animation_h2a3b"),
"hit": SubResource("Animation_lqyk3")
}

[sub_resource type="Curve2D" id="Curve2D_n8cwd"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 64.4272, -1.49831, -64.4272, 1.49831, -212, 159, 2.38419e-06, 139.342, -2.38419e-06, -139.342, -405, 4, -94.3929, -61.4306, 94.3929, 61.4306, -122, -122, -82.4072, 3.8147e-06, 82.4072, -3.8147e-06, 204, 159, 3.8147e-06, 130.353, -3.8147e-06, -130.353, 398, 1, 80.9085, -67.4238, -80.9085, 67.4238, 123, -116, 0, 0, 0, 0, 0, 0)
}
point_count = 8

[node name="BossBubble" type="StaticBody2D"]
script = ExtResource("1_5bua7")
attack_mine_scene = ExtResource("2_n041y")

[node name="TribunalBackground" type="Sprite2D" parent="."]
scale = Vector2(0.611111, 0.611111)
texture = ExtResource("3_62e6d")
metadata/_edit_use_anchors_ = true

[node name="TribunalChair" type="Sprite2D" parent="."]
position = Vector2(-5, 197)
scale = Vector2(0.815068, 0.815068)
texture = ExtResource("4_ixiw2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 182)
shape = SubResource("CircleShape2D_1d8u2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jaxbi")
}

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_n8cwd")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
rotates = false

[node name="Body" type="Sprite2D" parent="Path2D/PathFollow2D"]
position = Vector2(0, 180)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_xax12")

[node name="Face" type="Sprite2D" parent="Path2D/PathFollow2D/Body"]
position = Vector2(20, 0)
texture = ExtResource("2_fy3y1")

[node name="BubbleWig" type="Sprite2D" parent="Path2D/PathFollow2D/Body"]
position = Vector2(-28.8125, -34.9309)
scale = Vector2(0.999342, 0.999343)
texture = ExtResource("6_f1vc6")

[node name="TribunalDesk" type="Sprite2D" parent="."]
scale = Vector2(0.612037, 0.612037)
texture = ExtResource("7_fuxa4")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
